finished logig sort

--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -23,7 +23,7 @@
       }
 
       &.active {
-        background-color: #282828;
+        background-color: #1a1ae6;
         color: #fff;
       }
     }
